--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,4 +3,8 @@
   Copyright &copy; <%= Time.now.year %>
   <%= link_to "The Pragmatic Studio","https://pragmaticstudio.com" %>
 </p>
+<p>
+Twitter
+<%= link_to "Wow!", "https://www.youtube.com/watch?v=Xm_dS-wEFvs" %>
+</p>
 </footer>
